--- a/frontend/src/components/WeatherDetails/WeatherDetails.module.scss
+++ b/frontend/src/components/WeatherDetails/WeatherDetails.module.scss
@@ -1,13 +1,42 @@
-.add-btn{
-    cursor: pointer;
-    background: none;
-    border: none;
-    font-size: 2rem;
-    color: #ff000082;
-    transition: .3s ease;
+@import url('https://fonts.googleapis.com/css?family=Work+Sans&display=swap');
 
-    &:hover {
-        color: #ff0000;
-        text-shadow: 0px 0px 5px #ff000082;
+.details {
+    position: relative;
+    width: 80%;
+    // min-height: 85%;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    // padding: 20vh 20px 0;
+    border-radius: 3px;
+    background-color: #eeeeee24;
+    font-family: 'Work Sans', sans-serif;
+
+    align-self: baseline;
+    padding:5px 5px 5px 4%;
+}
+
+.details-bottom {
+    display: flex;
+    padding: 5px 0;
+}
+
+.details-conditions {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    h2 {
+        font-size: 6rem;
+        margin: 0;
+        font-weight: 900;
+    }
+    
+    h1 {
+        text-align:center;
+        letter-spacing: 2px;
+        margin: 0;
+        font-weight: 900;
     }
 }
