--- a/frontend/src/components/Header/Header.scss
+++ b/frontend/src/components/Header/Header.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Indie+Flower|Patrick+Hand&display=swap');
 
 .header{
-    position: absolute;
+    position: fixed;
     max-height: 10vh;
     display: flex;
     align-items: center;
@@ -11,28 +11,28 @@
     padding: 10px 4%;
     box-sizing: border-box;
     transition: .3s ease;
-    
+    z-index: 100;
     h2 {
         margin: 0;
     }
     
-    a { 
-        color: white;
-        font-weight: 900;
-        font-size: 1.5rem;
-        text-decoration: none;
-        // font-family: 'Fredoka One', cursive;
-        font-family: 'Indie Flower', cursive;
-        &:first-child{
-            margin-right: 10px;
-        }
-    }
+}
+
+.header a {
+     color: white;
+     font-weight: 900;
+     font-size: 1.5rem;
+     text-decoration: none;
+     font-family: 'Indie Flower', cursive;
+     &:first-child{
+         margin-right: 10px;
+     }
 }
 
 .logo {
     font-family: 'Pacifico', cursive;
     font-size: 2rem;
-    color: #2b4348;
+    color: white;
 }
 
 .links{
@@ -56,7 +56,11 @@
 
 
 
-@media  (max-width: 480px) {
+@media screen and (max-width: 500px) {
+
+    .header {
+        padding: 5px 2%;
+    }
     .links {
         position: fixed;
         top: 0;
@@ -67,13 +71,17 @@
         display: flex;
         flex-direction: column;
         padding-top: 10px;
-        z-index: 10;
+        z-index: 100;
         transition: .3s ease;
 
     }
 
     .burger-btn {
         display: block;
+
+        span {
+            font-size: 2.5rem;
+        }
     }
 
     .hide {
