--- a/frontend/src/components/SearchBar/SearchBar.module.scss
+++ b/frontend/src/components/SearchBar/SearchBar.module.scss
@@ -3,9 +3,10 @@
 
 .search-form {
     box-sizing: border-box;
-    width: 40%;
+    min-width: 40%;
     position: relative;
     margin-bottom: 10vh;
+    
     
     input {
         border: 1px solid #6d9eaa;
@@ -19,18 +20,21 @@
         font-family: 'Work Sans', sans-serif;
         font-weight: 700;
         font-size: 1rem;
+        z-index: 2;
     }
 
     ul {
         list-style: none;
         width: 100%;
-        padding: 5px;
+        padding:0;
         margin: 0;
         text-align: left;
         box-sizing: border-box;
         position: absolute;
         background-color: #eeeeee;
-        top: 40px;
+        border-right: 1px solid #6d9eaa;
+        border-left: 1px solid #6d9eaa;
+        top: 38px;
         z-index: 1;
         transition: .3s ease;
 
