--- a/frontend/src/components/WeatherDetails/Days/Days.module.scss
+++ b/frontend/src/components/WeatherDetails/Days/Days.module.scss
@@ -1,10 +1,7 @@
-
-
 .days {
     width: 100%;
     box-sizing: border-box;
-    padding: 0;
-    // min-height: 40%;
+    padding: 0 10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,11 +12,38 @@
         width: 100%;
         margin: 0;
         padding: 0;
-        // display: flex;
-        // justify-content: space-between;
         display: grid;
         grid-template-columns: repeat(5,1fr);
         grid-gap: 10px;
         height: 90%;
+    }
+}
+
+@media screen and (max-width: 790px) {
+
+    .days {
+        padding: 0;
+
+        ul { 
+            grid-gap: 5px;
+        }
+    }
+
+    
+   
+}
+@media screen and (max-width: 500px) {
+
+    .days { 
+        padding-top: 15px;
+        ul {
+            width: 100%;
+            margin: 0;
+            padding: 0;
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-gap: 10px;
+            height: auto
+        }
     }
 }
