--- a/frontend/src/components/WeatherDetails/Headline/Headline.module.scss
+++ b/frontend/src/components/WeatherDetails/Headline/Headline.module.scss
@@ -1,7 +1,4 @@
-
-
 .headline {
-    // text-transform: uppercase;
     height: 60%;
     display: flex;
     justify-content: space-between;
@@ -23,7 +20,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: #2b4348;
+    color: #b4a9a9;
 }
 
 .headline-location {
@@ -37,75 +34,8 @@
     }
 }
 
-
-
-
-
-
-
-
-.headline-top {
-    height: 20%;
-    display: flex;
-    justify-content: space-between;
-    border-bottom: 1px solid #eeeeee;
-    padding: 10px 0;
-    font-family: 'Orbitron', sans-serif;
-
-    h1 {
-        font-size: 1em;
-    }
-    h2 {
-        font-size: 1.8em;
-    }
-}
-
-.headline-top-right {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.headline-top-left{
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-
-.headline-body {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 80%;
-    box-sizing: border-box;
-    border-bottom: 1px solid #eeeeee;
-    font-family: 'Orbitron', sans-serif;
-
-    h2 {
-        font-size: 10em;
-    }
-}
-
-.headline-body-icon {
-    // height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    img { 
-        height: 100px;
-        width: auto;
-        margin-bottom: 10px;
-    }
-}
-
 .add-btn{
     cursor: pointer;
-    // position: absolute;
-    // left: 49%;
-    // top: 0;
     background: none;
     border: none;
     outline:none;
@@ -120,5 +50,17 @@
     &:hover {
         color: #ff0000;
         text-shadow: 0px 0px 5px #ff000082;
+    }
+
+    &:active {
+        animation-name: added;
+        animation-duration: 4s;
+    }
+}
+
+
+@media screen and (max-width:500px) {
+    .headline { 
+        margin-bottom: 35px;
     }
 }
