--- a/frontend/src/containers/Main/Main.module.scss
+++ b/frontend/src/containers/Main/Main.module.scss
@@ -1,9 +1,16 @@
 .main { 
     width: 100%;
     max-height: 100vh;
-    padding-top: 20vh;
+    padding-top: 25vh;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+@media screen and (max-width: 500px) {
+    .main { 
+        padding-top: 15vh;
+    }
+    
 }
