--- a/frontend/src/components/Header/Header.scss
+++ b/frontend/src/components/Header/Header.scss
@@ -24,7 +24,7 @@
      font-size: 1.5rem;
      text-decoration: none;
      font-family: 'Indie Flower', cursive;
-     &:first-child{
+     &:not(:last-child){
          margin-right: 10px;
      }
 }
@@ -51,6 +51,7 @@
 .header :global(a.active) {
     text-decoration: underline;
     color: #2b4348;
+    color: #65949D;
 }
 
 
@@ -60,6 +61,10 @@
 
     .header {
         padding: 5px 2%;
+
+        a {
+            color: #332d2d;
+        }
     }
     .links {
         position: fixed;
@@ -70,7 +75,7 @@
         background-color: #eeeeee;
         display: flex;
         flex-direction: column;
-        padding-top: 10px;
+        padding-top: 30px;
         z-index: 100;
         transition: .3s ease;
 
